WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108914
INPUT_MULTIPLE_FIELDS_UI: Should not move focus if the element already has focus
https://bugs.webkit.org/show_bug.cgi?id=108914
Summary
INPUT_MULTIPLE_FIELDS_UI: Should not move focus if the element already has focus
Kent Tamura
Reported
2013-02-04 23:43:46 PST
INPUT_MULTIPLE_FIELDS_UI: Should not move focus if the element already has focus Steps to reproduce this bug: 1. Open data:text/html,<input type=date> 2. Focus on the second or the third sub-field of the date input 3. A script calls dateInput.focus(). Expected: Nothing happens because the date input already has focus Actual: The first sub-field is focused.
Attachments
Patch
(8.66 KB, patch)
2013-02-05 01:12 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch 2
(8.63 KB, patch)
2013-02-05 01:29 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.53 KB, patch)
2013-02-05 04:43 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2013-02-05 01:12:39 PST
Created
attachment 186571
[details]
Patch
Build Bot
Comment 2
2013-02-05 01:20:49 PST
Comment on
attachment 186571
[details]
Patch
Attachment 186571
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://queues.webkit.org/results/16365710
Kent Tamura
Comment 3
2013-02-05 01:29:42 PST
Created
attachment 186574
[details]
Patch 2
Kentaro Hara
Comment 4
2013-02-05 03:55:47 PST
Comment on
attachment 186574
[details]
Patch 2 View in context:
https://bugs.webkit.org/attachment.cgi?id=186574&action=review
Looks OK
> Source/WebCore/ChangeLog:8 > + If timeInptu.focus() is called when a sub-field of the time input
Typo: timeInput
> Source/WebCore/ChangeLog:9 > + already has focus, we should not focus on the first sub-filed of the
Typo: sub-field
Kent Tamura
Comment 5
2013-02-05 04:43:06 PST
Created
attachment 186597
[details]
Patch for landing typo
WebKit Review Bot
Comment 6
2013-02-05 05:05:14 PST
Comment on
attachment 186597
[details]
Patch for landing Clearing flags on attachment: 186597 Committed
r141887
: <
http://trac.webkit.org/changeset/141887
>
WebKit Review Bot
Comment 7
2013-02-05 05:05:19 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug