Source/WebCore/html/BaseMultipleFieldsDateAndTimeInputType.h
@@ -81,6 +81,7 @@ private:
     virtual void createShadowSubtree() OVERRIDE FINAL;
     virtual void destroyShadowSubtree() OVERRIDE FINAL;
     virtual void disabledAttributeChanged() OVERRIDE FINAL;
+    virtual bool willCancelFocus(bool restorePreviousSelection, FocusDirection) OVERRIDE;
     virtual void forwardEvent(Event*) OVERRIDE FINAL;
     virtual void handleFocusEvent(FocusDirection) OVERRIDE;
     virtual void handleKeydownEvent(KeyboardEvent*) OVERRIDE FINAL;
